k8s/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database-set
  namespace: production
spec:
  serviceName: "db-service"
  replicas: 1
  selector:
    matchLabels:
      app: mysql-db
  template:
    metadata:
      labels:
        app: mysql-db
    spec:
      containers:
        - name: mysql
          image: mysql:5.7
          ports:
            - containerPort: 3306
              name: mysql
